cmake_minimum_required(VERSION 3.26)
project(CAT_CS)

set(CMAKE_CXX_STANDARD 17)

add_executable(CAT_CS
        Week01/Vector/5Medium.cpp
        Week01/Vector/Vector.cpp
        Week02/SLL/SLL.h
        Week02/SLL/SLL.cpp
        Week02/test.cpp
        Graph/Q1.cpp
        Graph/Q2.cpp
        Graph/Q3.cpp
        Graph/Q4.cpp
        Graph/Q5.cpp
        Graph/Q6.cpp)